--- a/index.html
+++ b/index.html
@@ -128,12 +128,9 @@
 
     <div class="light-grey" class="light-grey">
         <div class="line gradient"></div>
-           <br>
-           <br>
-           <br>
         <div class="container">
             <div class="row">
-                <div class="col-lg-6"><h5 class="heading-green-line size4">Een aantal zaken die van belang zijn om te beoordelen:</h5>
+                <div class="col-lg-6 padding-top"><h5 class="heading-green-line size4">Een aantal zaken die van belang zijn om te beoordelen:</h5>
                 <!-- <hr class="hr-green"> -->
                 <br><br><br>
                 </div>
@@ -143,13 +140,11 @@
                 <div class="col-lg-12">
                     <div class="col-lg-4 dienst-margin">
                         <div class="icon-style">
-                            <img class="icon-s" src="img/icons/2.png" alt="">
+                            <img class="icon-s" src="img/icons/1.png" alt="">
                             <br><br>
                         </div>
-                        <p>Wat staat er in de Splitsingsakte en Model reglement ?
-                        </p>
-                        <br>
-                        <br>
+                        <p>Wat staat er in de Splitsingsakte en Model reglement ?</p>
+                        <br><br>
                     </div>
 
                     <div class="col-lg-4 dienst-margin">
@@ -157,80 +152,67 @@
                             <img class="icon-s" src="img/icons/2.png" alt="">
                             <br><br>
                         </div>
-                        <p>Wat staat er in de Splitsingsakte en Model reglement ?
+                        <p>Hoe is het totale onderhoud ?</p>
+                        <br><br>
+                    </div>
+                    <div class="col-lg-4 dienst-margin">
+                        <div class="icon-style">
+                            <img class="icon-s" src="img/icons/3.png" alt="">
+                            <br><br>
+                        </div>
+                        <p>Wat is wel of niet voor uw eigen rekening ?</p>
+                        <br>
+                        <br>
+                    </div>
+                    <div class="col-lg-4 dienst-margin">
+                        <div class="icon-style">
+                            <img class="icon-s" src="img/icons/4.png" alt="">
+                            <br><br>
+                        </div>
+                        <p>Is er een lange termijn onderhoudsplan en wordt dat gevolgd ?</p>
+                        <br><br>
+                    </div>
+                    <div class="col-lg-4 dienst-margin">
+                        <div class="icon-style">
+                            <img class="icon-s" src="img/icons/5.png" alt="">
+                            <br><br>
+                        </div>
+                        <p>Zijn er bijzondere uitgaven te verwachten?</p>
+                        <br><br>
+                    </div>
+                    <div class="col-lg-4 dienst-margin">
+                        <div class="icon-style">
+                            <img class="icon-s" src="img/icons/6.png" alt="">
+                            <br><br>
+                        </div>
+                        <p>Welke afwijkende afspraken zijn er gemaakt ?
                         </p>
                         <br>
                         <br>
                     </div>
                     <div class="col-lg-4 dienst-margin">
                         <div class="icon-style">
-                            <img class="icon-s" src="img/icons/2.png" alt="">
+                            <img class="icon-s" src="img/icons/7.png" alt="">
                             <br><br>
                         </div>
-                        <p>Wat staat er in de Splitsingsakte en Model reglement ?
-                        </p>
-                        <br>
-                        <br>
+                        <p>Is er voldoende gespaard voor al dat onderhoud ?</p>
+                        <br><br>
                     </div>
                     <div class="col-lg-4 dienst-margin">
                         <div class="icon-style">
-                            <img class="icon-s" src="img/icons/2.png" alt="">
+                            <img class="icon-s" src="img/icons/8.png" alt="">
                             <br><br>
                         </div>
-                        <p>Wat staat er in de Splitsingsakte en Model reglement ?
-                        </p>
-                        <br>
-                        <br>
+                        <p>Hoe is de samenstelling van de andere eigenaren; is er ruzie ?</p>
+                        <br><br>
                     </div>
                     <div class="col-lg-4 dienst-margin">
                         <div class="icon-style">
-                            <img class="icon-s" src="img/icons/2.png" alt="">
+                            <img class="icon-s" src="img/icons/9.png" alt="">
                             <br><br>
                         </div>
-                        <p>Wat staat er in de Splitsingsakte en Model reglement ?
-                        </p>
-                        <br>
-                        <br>
-                    </div>
-                    <div class="col-lg-4 dienst-margin">
-                        <div class="icon-style">
-                            <img class="icon-s" src="img/icons/2.png" alt="">
-                            <br><br>
-                        </div>
-                        <p>Wat staat er in de Splitsingsakte en Model reglement ?
-                        </p>
-                        <br>
-                        <br>
-                    </div>
-                    <div class="col-lg-4 dienst-margin">
-                        <div class="icon-style">
-                            <img class="icon-s" src="img/icons/2.png" alt="">
-                            <br><br>
-                        </div>
-                        <p>Wat staat er in de Splitsingsakte en Model reglement ?
-                        </p>
-                        <br>
-                        <br>
-                    </div>
-                    <div class="col-lg-4 dienst-margin">
-                        <div class="icon-style">
-                            <img class="icon-s" src="img/icons/2.png" alt="">
-                            <br><br>
-                        </div>
-                        <p>Wat staat er in de Splitsingsakte en Model reglement ?
-                        </p>
-                        <br>
-                        <br>
-                    </div>
-                    <div class="col-lg-4 dienst-margin">
-                        <div class="icon-style">
-                            <img class="icon-s" src="img/icons/2.png" alt="">
-                            <br><br>
-                        </div>
-                        <p>Wat staat er in de Splitsingsakte en Model reglement ?
-                        </p>
-                        <br>
-                        <br>
+                        <p>Wat zijn de maandelijkse servicekosten en gaan die nog wijzigen?</p>
+                        <br><br>
 
                     </div> 
                     <div class="last-padding text-center">
