heb aanbod aangepast

--- a/index.html
+++ b/index.html
@@ -270,35 +270,42 @@
                 </div>               
            </div>
            <div class="row">
-               <div class="col-md-12">
-                    <div class="col-md-4 dienst-margin">
+               <div class="col-md-12 ">
+                    <div class="col-md-3 ">
                         <div class="icon-style">
-                            <img class="icon-s" src="img/icons/2.png" alt="">
-                            <br><br><br>
+                            <img class="icon-s" src="img/icons/step1.png" alt="">
+                            <br><br><br><br>
                         </div>
-                        <p>Verzamelt u alle documenten en Krijg ik die via mail toegestuurd.
+                        <p>1. Verzamelt u alle documenten en Krijg ik die via mail toegestuurd.
                         </p>
                         <br><br><br>
                     </div>
-                    <div class="col-md-4 dienst-margin">
+                    <div id="steps-i" class="col-md-1 text-center steps-i">
+                      <i class="   fa fa-arrow-circle-right x2 " aria-hidden="true"></i>
+                    </div>
+                    <div class="col-md-4 ">
                         <div class="icon-style">
-                            <img class="icon-s" src="img/icons/2.png" alt="">
+                            <img class="icon-s" src="img/icons/step2.png" alt="">
                             <br><br><br>
                         </div>
-                        <p>Beroordeling  Splitsingsakte; modelreglement, financiële stukken laatste 3 jaren, notulen laatste 3 jaren, overzicht andere eigenaren en MJOP.
+                        <p>2. Beroordeling  Splitsingsakte; modelreglement, financiële stukken laatste 3 jaren, notulen laatste 3 jaren, overzicht andere eigenaren en MJOP.
                         </p>
                         <br>
                         <br>
                     </div>
-                    <div class="col-md-4 dienst-margin">
+                    <div class="col-md-1 text-center">
+                      <i class="fa fa-arrow-circle-right x2 steps-i" aria-hidden="true"></i>
+                    </div>                    
+                    <div class="col-md-3 ">
                         <div class="icon-style">
-                            <img class="icon-s" src="img/icons/2.png" alt="">
-                            <br><br><br>
+                            <img class="icon-s" src="img/icons/step3.png" alt="">
+                            <br><br><br><br>
                         </div>
-                        <p>Binnen uiterlijk 14 dagen ontvangt u een rapport over de staat van de VvE. Indien gewenst kan ik -in overleg- het rapport thuis bij u toelichten
+                        <p>3. Binnen uiterlijk 14 dagen ontvangt u een rapport over de staat van de VvE. 
                         </p>
                         <br>
                         <br>
+
                     </div>                   
                </div>
            </div>
